--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "angular-messages": "1.7.5",
     "angular-material": "1.1.18",
     "html5-boilerplate": "0.0.1",
-    "angular-material-icons": "0.7.1",
-    "bootstrap": "4.3.1"
+    "angular-material-icons": "0.7.1"
   },
   "devDependencies": {
     "angular-mocks": "1.7.5",
@@ -26,7 +25,7 @@
     "karma": "3.1.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-firefox-launcher": "1.1.0",
-    "karma-jasmine": "1.1.2"
+    "karma-jasmine": "2.0.0"
   },
   "scripts": {
     "update-deps": "npm update",
