--- a/manifest.json
+++ b/manifest.json
@@ -25,10 +25,17 @@
   
   "permissions": [
     "storage",
+    "alarms",
+    "notifications",
     "https://www.goodreads.com/",
     "https://www.googleapis.com/",
     "https://trello.com/"
   ],
+
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
   
   "content_security_policy": "script-src 'self' https://sg.media-imdb.com https://*.media-imdb.com https://trello.com; object-src 'self'"
 }
