--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
   "repository": "https://github.com/injulkarnilesh/trello-checklists",
   "license": "MIT",
   "dependencies": {
-    "jquery": "3.4.1",
     "angular": "1.7.5",
-    "angular-loader": "1.7.5",
-    "angular-route": "1.7.5",
     "angular-animate": "1.7.5",
     "angular-aria": "1.7.5",
-    "angular-messages": "1.7.5",
+    "angular-loader": "1.7.5",
     "angular-material": "1.1.18",
+    "angular-material-icons": "0.7.1",
+    "angular-messages": "1.7.5",
+    "angular-route": "1.7.5",
     "html5-boilerplate": "0.0.1",
-    "angular-material-icons": "0.7.1"
+    "jquery": "3.4.1",
+    "ng-material-datetimepicker": "1.18.5"
   },
   "devDependencies": {
     "angular-mocks": "1.7.5",
@@ -29,7 +30,7 @@
   },
   "scripts": {
     "update-deps": "npm update",
-    "copy-libs": "cpx \"node_modules/{angular,bootstrap,jquery,angular-*,html5-boilerplate/dist}/**/*\" app/lib -C",
+    "copy-libs": "cpx \"node_modules/{angular,bootstrap,jquery,ng-*,moment*,angular-*,html5-boilerplate/dist}/**/*\" app/lib -C",
     "prestart": "npm install",
     "start": "http-server -a localhost -p 8000 -c-1 ./app",
     "pretest": "npm install",
