--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,11 @@
   
   "browser_action": {
     "default_popup": "index.html",
-    "default_icon" : "images/icon.png"
+    "default_icon": {                    
+      "16": "images/icon16.png",         
+      "48": "images/icon48.png",         
+      "128": "images/icon128.png"          
+    }
   },
 
   "externally_connectable": {
