Revert travis integeration

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "prestart": "npm install",
     "start": "http-server -a localhost -p 8000 -c-1 ./app",
     "pretest": "npm run copy-libs",
-    "test": "karma start karma.conf.js --single-run",
-    "testing": "karma start karma.conf.js"
+    "test": "karma start karma.conf.js",
+    "test-single-run": "npm test -- --single-run"
   }
 }
